<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfilesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="34dp"
                app:cardBackgroundColor="@color/gradientViolet"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="42dp">

                <Spinner
                    android:id="@+id/spinProf"
                    android:layout_width="196dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"></Spinner>

                <TextView
                    android:id="@+id/textProf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/textview_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="398dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="128dp"
                app:cardBackgroundColor="@color/c7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textview_add_profile"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="90dp"
                    android:text="Profile\nName"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editextprof"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="80dp"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ
                abcdefghijklmnopqrstuvwxyz . 1234567890"
                    android:ems="10"
                    android:hint="@string/hint_www_demo_com"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/whiteTextColor"
                    android:textColorHint="@color/whiteTextColor" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="180dp"
                    android:text="@string/textView_server_ip"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editextserip"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="170dp"
                    android:digits="1234567890 ."
                    android:ems="10"
                    android:hint="@string/hint_ser_add_192_100_0_0"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="16"
                    android:textColor="@color/whiteTextColor"
                    android:textColorHint="@color/whiteTextColor" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="270dp"
                    android:text="@string/port_no_texttview"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editextport"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="260dp"
                    android:digits="1234567890"
                    android:ems="10"
                    android:hint="@string/port_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/whiteTextColor"
                    android:textColorHint="@color/whiteTextColor" />

                <Button
                    android:id="@+id/add_prof"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="330dp"
                    android:background="@color/purple_200"
                    android:text="@string/add_prof_btn"
                    android:textColor="@color/whiteTextColor" />


            </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>