<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/gradientViolet"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="42dp">

        <Spinner
            android:id="@+id/spin_app"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="18dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginStart="135dp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/whiteTextColor"
            android:text="@string/textView_appliances"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginStart="10dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        app:cardBackgroundColor="@color/c8"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="90dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/whiteTextColor"
            android:text="@string/textview_add_appliances"
            android:layout_marginStart="60dp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="110dp"
            android:text="Appliance\nName"
            android:textColor="@color/whiteTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittextapp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="110dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ
            abcdefghijklmnopqrstuvwxyz 1234567890"
            android:ems="10"
            android:textColor="@color/whiteTextColor"
            android:textColorHint="@color/whiteTextColor"
            android:hint="@string/texview_fan_bulb"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:layout_marginStart="125dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:textColor="@color/whiteTextColor"
            android:text="Appliance\nPlace"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittextplace"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="210dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ
            abcdefghijklmnopqrstuvwxyz 1234567890"
            android:ems="10"
            android:textColorHint="@color/whiteTextColor"
            android:textColor="@color/whiteTextColor"
            android:hint="@string/textview_hall_bedroom"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:layout_marginStart="125dp" />

        <Button
            android:id="@+id/add_app"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="100dp"
            android:textColor="@color/whiteTextColor"
            android:background="@color/purple_200"
            android:text="@string/tex_btn_add_appl"
            android:layout_marginStart="90dp" />


    </androidx.cardview.widget.CardView>


</RelativeLayout>